--- a/v/2.2.1-0/interfaces/constants.callbacksinterface.html
+++ b/v/2.2.1-0/interfaces/constants.callbacksinterface.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>CallbacksInterface | Pluggers - v2.2.0</title>
-	<meta name="description" content="Documentation for Pluggers - v2.2.0">
+	<title>CallbacksInterface | Pluggers - v2.2.1-0</title>
+	<meta name="description" content="Documentation for Pluggers - v2.2.1-0">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
 	<script async src="../assets/js/search.js" id="search-script"></script>
@@ -23,7 +23,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="../index.html" class="title">Pluggers - v2.2.0</a>
+					<a href="../index.html" class="title">Pluggers - v2.2.1-0</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -52,7 +52,7 @@
 		<div class="container">
 			<ul class="tsd-breadcrumb">
 				<li>
-					<a href="../modules.html">Pluggers - v2.2.0</a>
+					<a href="../modules.html">Pluggers - v2.2.1-0</a>
 				</li>
 				<li>
 					<a href="../modules/constants.html">constants</a>
@@ -106,7 +106,7 @@
 					<div class="tsd-signature tsd-kind-icon">init<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">(</span>pluginsStates<span class="tsd-signature-symbol">: </span><span class="tsd-signature-symbol">{}</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-type">unknown</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/alvitoraidhy/pluggers/blob/6a26722/src/constants.ts#L40">constants.ts:40</a></li>
+							<li>Defined in <a href="https://github.com/alvitoraidhy/pluggers/blob/d4f8147/src/constants.ts#L40">constants.ts:40</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -157,7 +157,7 @@
 					<div class="tsd-signature tsd-kind-icon">error<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">(</span>event<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, error<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Error</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-type">null</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">Error</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">Error</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">null</span><span class="tsd-signature-symbol">&gt;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/alvitoraidhy/pluggers/blob/6a26722/src/constants.ts#L54">constants.ts:54</a></li>
+							<li>Defined in <a href="https://github.com/alvitoraidhy/pluggers/blob/d4f8147/src/constants.ts#L54">constants.ts:54</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -211,7 +211,7 @@
 					<div class="tsd-signature tsd-kind-icon">shutdown<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">(</span>state<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/alvitoraidhy/pluggers/blob/6a26722/src/constants.ts#L67">constants.ts:67</a></li>
+							<li>Defined in <a href="https://github.com/alvitoraidhy/pluggers/blob/d4f8147/src/constants.ts#L67">constants.ts:67</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
